// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builder Expect code to gen 1`] = `
{
  "fnBodies": [
    "
        Id createContact0 {
          Acc_ProjectContactLink__c contact = new Acc_ProjectContactLink__c();
          
          Database.insert(contact);
        }
      ",
  ],
  "fnName": "createContact0()",
}
`;

exports[`builder Expect more code to gen 1`] = `
{
  "fnBodies": [
    "
        Id createContact1 {
          Acc_ProjectContactLink__c contact = new Acc_ProjectContactLink__c();
          contact.Title = 'My fancy title'
          Database.insert(contact);
        }
      ",
  ],
  "fnName": "createContact1()",
}
`;
